# mantis-sdk

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
contracts/ethereum/: escrow.sol
contracts/ethereum/abi/: escrow.json
contracts/solana/escrow/: Cargo.toml
contracts/solana/escrow/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: cmd.rs  credentials.rs  lib.rs  main.rs
sdk/src/ethereum/: cli.rs  client.rs  mod.rs
sdk/src/solana/: cli.rs  client.rs  mod.rs
