[package]
name = "mantis-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
mantis-escrow-program = { path = "../contracts/solana/escrow" }
mantis-common = { path = "../common" }

anyhow = "1.0.32"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1.81"
ruint = "1.12.3"
thiserror = "1.0.64"
clap = { version = "=4.5.13", features = ["derive", "env"] }

# Solana dependencies
anchor-client = "0.29.0"
solana-sdk = "1.17.30"
anchor-spl = "0.29.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-client = "1.8.3"
borsh = "=0.10.3"

# Ethereum dependencies
alloy = { version = "0.3.6", features = [
    "signers",
    "signer-mnemonic",
    "signer-keystore",
    "signer-local",
    "rpc-client",
    "providers",
    "network",
    "rpc-types-eth",
    "sol-types",
    "contract"
] }
